fixed dependencies for google colab

--- a/model/interactive_model_plotting/model_demo.ipynb
+++ b/model/interactive_model_plotting/model_demo.ipynb
@@ -11,22 +11,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "run this notebook in google colab by clicking here:\n",
+    "\n",
+    "https://colab.research.google.com/github/coschroeder/cone_ribbon/blob/main/model/interactive_model_plotting/model_demo.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Choose the readily releasable pool (RRP) size and the intermediate pool (IP) size of the ribbon. \n",
     "\n",
     "The maximal release rate is given as a fraction of the RRP size.\n",
     "\n",
-    "Run the cell below and change the values of the parameters with the three sliders."
+    "Run the cell below and change the values of the parameters with the three sliders.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! git clone  https://github.com/coschroeder/cone_ribbon.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('cone_ribbon/model/interactive_model_plotting/')\n",
+    "sys.path.append('cone_ribbon/model/model_implementation')\n",
+    "from utils_interactive import plot_interactive_ribbon\n",
+    "plot_interactive_ribbon()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e5cbb5d8feb41909b8d0b028d2c5afd",
+       "model_id": "3c67c082b8af46b38e04151efaa14691",
        "version_major": 2,
        "version_minor": 0
       },
