fixed dependencies for google colab

--- a/model/interactive_model_plotting/model_demo.ipynb
+++ b/model/interactive_model_plotting/model_demo.ipynb
@@ -34,31 +34,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# run this cell the first time you use it to clone the github repo\n",
     "! git clone  https://github.com/coschroeder/cone_ribbon.git"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append('cone_ribbon/model/interactive_model_plotting/')\n",
-    "sys.path.append('cone_ribbon/model/model_implementation')\n",
-    "from utils_interactive import plot_interactive_ribbon\n",
-    "plot_interactive_ribbon()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c67c082b8af46b38e04151efaa14691",
+       "model_id": "9f5a999beb2542e1a4ac0721310554f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -71,6 +59,9 @@
     }
    ],
    "source": [
+    "import sys\n",
+    "sys.path.append('cone_ribbon/model/interactive_model_plotting/')\n",
+    "sys.path.append('cone_ribbon/model/model_implementation')\n",
     "from utils_interactive import plot_interactive_ribbon\n",
     "plot_interactive_ribbon()"
    ]
