changed loading for google colab II

--- a/model/interactive_model_plotting/model_demo.ipynb
+++ b/model/interactive_model_plotting/model_demo.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "run this notebook in google colab by clicking here:\n",
     "\n",
-    "https://colab.research.google.com/github/coschroeder/cone_ribbon/blob/main/model/interactive_model_plotting/model_demo.ipynb"
+    "https://colab.research.google.com/github/coschroeder/cone_ribbon/blob/master/model/interactive_model_plotting/model_demo.ipynb"
    ]
   },
   {
@@ -34,8 +34,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# run this cell the first time you use it to clone the github repo\n",
-    "! git clone  https://github.com/coschroeder/cone_ribbon.git"
+    "# run this cell the first time you use it to load the necessary files\n",
+    "!npm install -g degit\n",
+    "!npx degit github:coschroeder/cone_ribbon/model/interactive_model_plotting/ -f \n",
+    "!npx degit github:coschroeder/cone_ribbon/model/model_implementation/   -f"
    ]
   },
   {
@@ -59,9 +61,6 @@
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.append('cone_ribbon/model/interactive_model_plotting/')\n",
-    "sys.path.append('cone_ribbon/model/model_implementation')\n",
     "from utils_interactive import plot_interactive_ribbon\n",
     "plot_interactive_ribbon()"
    ]
