updated interactive plotting. ca and layout.

--- a/model/interactive_model_plotting/model_demo.ipynb
+++ b/model/interactive_model_plotting/model_demo.ipynb
@@ -53,13 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe1e36d96da84142af142de349ea21d9",
+       "model_id": "37f3ac7326d24f8fa3147cbe0cab13ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -75,20 +77,6 @@
     "ribbon = Ribbon_Plot()\n",
     "ribbon.plot_interactive_ribbon()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
