--- a/model/interactive_model_plotting/model_demo.ipynb
+++ b/model/interactive_model_plotting/model_demo.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "The maximal release rate is given as a fraction of the RRP size.\n",
     "\n",
-    "Run the cell below and change the values of the parameters with the three sliders.\n",
+    "Run the cells below and change the values of the parameters with the three sliders.\n",
     "\n"
    ]
   },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -61,12 +61,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69d9345908444782b9911dcaa5741708",
+       "model_id": "93e8f9845ffa4f1582011bcf5d0eb7fb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(FloatSlider(value=4.0, continuous_update=False, description='RRP Size:', max=8.0…"
+       "VBox(children=(GridspecLayout(children=(FloatSlider(value=4.0, continuous_update=False, description='RRP Size:…"
       ]
      },
      "metadata": {},
@@ -74,16 +74,26 @@
     }
    ],
    "source": [
-    "ribbon = Ribbon_Plot()\n",
+    "# set the figuresize matching best to your browser window/screensize\n",
+    "figuresize = (30,8)\n",
+    "ribbon = Ribbon_Plot(figsize=figuresize)\n",
     "ribbon.plot_interactive_ribbon()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 82,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Ca simulation\n",
+    "\n",
+    "Ca concentration is simulated as following:\n",
+    "\n",
+    "$$Ca_{concentration} = Ca_{kernel} \\ast \\sigma(light\\_kernel \\ast stimulus),$$\n",
+    "\n",
+    "where $\\sigma$ is a non-linearty and light_kernel is a biphasic kernel from [1].\n",
+    "\n",
+    "[1] Baden, Tom, et al. \"A synaptic mechanism for temporal filtering of visual signals.\" PLoS Biol 12.10 (2014): e1001972."
+   ]
   }
  ],
  "metadata": {
@@ -91,18 +101,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.0"
   },
   "varInspector": {
    "cols": {
