--- a/model/interactive_model_plotting/model_demo.ipynb
+++ b/model/interactive_model_plotting/model_demo.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simulate glutamate release at a ribbon synapse\n"
+    "# Simulation of glutamate release at a ribbon synapse\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "run this notebook in google colab by clicking here:\n",
+    "Run this notebook in google colab by clicking here:\n",
     "\n",
     "https://colab.research.google.com/github/coschroeder/cone_ribbon/blob/master/model/interactive_model_plotting/model_demo.ipynb"
    ]
@@ -20,11 +20,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Choose the readily releasable pool (RRP) size and the intermediate pool (IP) size of the ribbon. \n",
+    "### How to use the notebook\n",
+    "You can run the simulation by running the two cells (code boxes) below. For running a cell, you have to click into the cell and press \"Ctrl\"+\"Enter\" or, in *google colab* by clicking on the small *play* symbol left to the cell. Afterwards you need to change a slider for the simulation to appear. Then change the paramerters and choose the stimulus as you want to.\n",
     "\n",
-    "The maximal release rate is given as a fraction of the RRP size.\n",
+    "**TL;DR:** Run the cells below and change the values of the parameters with the sliders.\n",
     "\n",
-    "Run the cells below and change the values of the parameters with the three sliders.\n",
+    "### Parameter explanation\n",
+    "- **RRP:** Readily releasable pool size of the ribbon\n",
+    "- **IP:** Intermediate pool size of the ribbon\n",
+    "- **Max. release rate:** Maximal release rate, given as a fraction of the RRP size.\n",
+    "- **Stimulus:** \"Light\" stimulus\n",
+    "- **Ca kernel (tau):** Time constant of the decay for a double exponential kernel. (For more details of the Calcium simulation see below) \n",
+    "- **Time resolution:** Time resolution of the simulation. If you want to simulate high frequencies, decrease the time resolution. This results in longer runtimes, so be patient.\n",
+    "- **Track changes:** If you tick this box, five subsequen simulation results will be displayed before the figure is reset.\n",
+    "- **Clear plot:** Resets the figure internally for the next plotting event (If *Track changes* is ticked). \n",
+    "\n",
     "\n"
    ]
   },
@@ -37,23 +47,17 @@
     "# run this cell the first time you use it to load the necessary files\n",
     "!npm install -g degit\n",
     "!npx degit github:coschroeder/cone_ribbon/model/interactive_model_plotting/ -f \n",
-    "!npx degit github:coschroeder/cone_ribbon/model/model_implementation/   -f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "!npx degit github:coschroeder/cone_ribbon/model/model_implementation/   -f\n",
+    "    \n",
+    "# and import it    \n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from utils_interactive import Ribbon_Plot\n"
+    "from utils_interactive import Ribbon_Plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -61,7 +65,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93e8f9845ffa4f1582011bcf5d0eb7fb",
+       "model_id": "bda9e7c977b44454a8ebf525ff00b804",
        "version_major": 2,
        "version_minor": 0
       },
@@ -74,8 +78,9 @@
     }
    ],
    "source": [
-    "# set the figuresize matching best to your browser window/screensize\n",
+    "# Set the figuresize matching best to your browser window/screensize.\n",
     "figuresize = (30,8)\n",
+    "\n",
     "ribbon = Ribbon_Plot(figsize=figuresize)\n",
     "ribbon.plot_interactive_ribbon()"
    ]
