--- a/model/interactive_model_plotting/model_demo.ipynb
+++ b/model/interactive_model_plotting/model_demo.ipynb
@@ -21,7 +21,8 @@
    "metadata": {},
    "source": [
     "### How to use the notebook\n",
-    "You can run the simulation by running the two cells (code boxes) below. For running a cell, you have to click into the cell and press \"Ctrl\"+\"Enter\" or, in *google colab* by clicking on the small *play* symbol left to the cell. Afterwards you need to change a slider for the simulation to appear. Then change the paramerters and choose the stimulus as you want to.\n",
+    "You can run the simulation by running the two cells (code boxes) below. For running a cell, you have to click into the cell and press \"Ctrl\"+\"Enter\" or, if you opened the notebook in *google colab* you can click on the small *play* symbol left to the cell. \n",
+    "Afterwards you need to change a slider for the simulation to appear. Then change the paramerters and choose the stimulus as you want to.\n",
     "\n",
     "**TL;DR:** Run the cells below and change the values of the parameters with the sliders.\n",
     "\n",
@@ -40,9 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: npm: command not found\n",
+      "/bin/bash: npx: command not found\n",
+      "/bin/bash: npx: command not found\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# run this cell the first time you use it to load the necessary files\n",
     "!npm install -g degit\n",
@@ -57,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -65,7 +78,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bda9e7c977b44454a8ebf525ff00b804",
+       "model_id": "c77164e7db464c4e8a4a4eec68953368",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,6 +119,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   },
   "varInspector": {
    "cols": {
