added ca baseline slider

--- a/model/interactive_model_plotting/model_demo.ipynb
+++ b/model/interactive_model_plotting/model_demo.ipynb
@@ -21,8 +21,8 @@
    "metadata": {},
    "source": [
     "### How to use the notebook\n",
-    "You can run the simulation by running the two cells (code boxes) below. For running a cell, you have to click into the cell and press \"Ctrl\"+\"Enter\" or, if you opened the notebook in *google colab* you can click on the small *play* symbol left to the cell. \n",
-    "Afterwards you need to change a slider for the simulation to appear. Then change the paramerters and choose the stimulus as you want to.\n",
+    "You can start the simulation by running the two cells (code boxes) below. For running a cell, you have to click into the cell and press \"Ctrl\"+\"Enter\" or, if you opened the notebook in *google colab* you can click on the small *play* symbol left to the cell. \n",
+    "Afterwards you need to change a slider for the simulation to appear. Then change the parameters and choose the stimulus as you want to.\n",
     "\n",
     "**TL;DR:** Run the cells below and change the values of the parameters with the sliders.\n",
     "\n",
@@ -30,10 +30,12 @@
     "- **RRP:** Readily releasable pool size of the ribbon\n",
     "- **IP:** Intermediate pool size of the ribbon\n",
     "- **Max. release rate:** Maximal release rate, given as a fraction of the RRP size.\n",
+    "- **Ca activation baseline:** The baseline Ca which is necessary to activate the ribbon \"half\" (offset of the non-linearity).\n",
     "- **Stimulus:** \"Light\" stimulus\n",
     "- **Ca kernel (tau):** Time constant of the decay for a double exponential kernel. (For more details of the Calcium simulation see below) \n",
     "- **Time resolution:** Time resolution of the simulation. If you want to simulate high frequencies, decrease the time resolution. This results in longer runtimes, so be patient.\n",
     "- **Track changes:** If you tick this box, five subsequen simulation results will be displayed before the figure is reset.\n",
+    "- **Set to ... values:** Sets the parameters to the zone specific values (Acute zone, nasal region, dorsal region)\n",
     "- **Clear plot:** Resets the figure internally for the next plotting event (If *Track changes* is ticked). \n",
     "\n",
     "\n"
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -86,7 +88,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1d15fc79d5e42d0adcc60c9995a8a5f",
+       "model_id": "0d7fc879ca1d42a18f22b6560d18cbc1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -135,18 +137,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.0"
   },
   "varInspector": {
    "cols": {
