--- a/model/interactive_model_plotting/model_demo.ipynb
+++ b/model/interactive_model_plotting/model_demo.ipynb
@@ -25,19 +25,6 @@
     "Afterwards you need to change a slider for the simulation to appear. Then change the parameters and choose the stimulus as you want to.\n",
     "\n",
     "**TL;DR:** Run the cells below and change the values of the parameters with the sliders.\n",
-    "\n",
-    "### Parameter explanation\n",
-    "- **RRP:** Readily releasable pool size of the ribbon\n",
-    "- **IP:** Intermediate pool size of the ribbon\n",
-    "- **Max. release rate:** Maximal release rate, given as a fraction of the RRP size.\n",
-    "- **Ca activation baseline:** The baseline Ca which is necessary to activate the ribbon \"half\" (offset of the non-linearity).\n",
-    "- **Stimulus:** \"Light\" stimulus\n",
-    "- **Ca kernel (tau):** Time constant of the decay for a double exponential kernel. (For more details of the Calcium simulation see below) \n",
-    "- **Time resolution:** Time resolution of the simulation. If you want to simulate high frequencies, decrease the time resolution. This results in longer runtimes, so be patient.\n",
-    "- **Track changes:** If you tick this box, five subsequen simulation results will be displayed before the figure is reset.\n",
-    "- **Set to ... values:** Sets the parameters to the zone specific values (Acute zone, nasal region, dorsal region)\n",
-    "- **Clear plot:** Resets the figure internally for the next plotting event (If *Track changes* is ticked). \n",
-    "\n",
     "\n"
    ]
   },
@@ -80,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -88,7 +75,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d7fc879ca1d42a18f22b6560d18cbc1",
+       "model_id": "acf8ef6ad535437fa5fac7334ac914f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,6 +92,41 @@
     "figuresize = (20,8)\n",
     "\n",
     "ribbon = Ribbon_Plot(figsize=figuresize)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parameter explanation\n",
+    "\n",
+    "##### Ribbon paramters\n",
+    "- **RRP Size:** Readily releasable pool size of the ribbon\n",
+    "- **IP Size:** Intermediate pool size of the ribbon\n",
+    "- **Max. Release Rate:** Maximal release rate, given as a fraction of the RRP size.\n",
+    "- **Ca activation baseline:** The baseline Ca which is necessary to activate the ribbon \"half\" (offset of the non-linearity).\n",
+    "- **Set to ... values:** Sets the parameters to the zone specific values (Acute zone, nasal region, dorsal region)\n",
+    "\n",
+    "\n",
+    "##### Stimulus paramters\n",
+    "\n",
+    "- **Stimulus:** \"Light\" stimulus, with fixed or varying frequency.\n",
+    "    - *Fixed Step:* original flash stimulus as presented in the paper (3sec on and off phases respectivley.\n",
+    "    - *Steps:* light flashes with varying frequency\n",
+    "    - *Sine:* sinusoidal stimulus with varying frequency\n",
+    "    - *Noise:* 'uniform' noise with frequency as changing rate\n",
+    "    - *Chirp:* chirp stimulus from 0.1 to 5 Hz\n",
+    "- **Stimulus Frequency:** Frequency for the *Steps*, *Sine* and *Noise* stimulus.\n",
+    "\n",
+    "\n",
+    "##### Other paramters\n",
+    "\n",
+    "- **Ca kernel (tau):** Time constant of the decay for a double exponential kernel. (For more details of the Calcium simulation see below) \n",
+    "- **Time resolution:** Time resolution of the simulation. If you want to simulate high frequencies, decrease the time resolution. This results in longer runtimes, so be patient.\n",
+    "- **Track changes:** If you tick this box, five subsequen simulation results will be displayed before the figure is reset.\n",
+    "- **Clear plot:** Resets the figure internally for the next plotting event (If *Track changes* is ticked). \n",
+    "\n",
+    "\n"
    ]
   },
   {
