--- a/model/interactive_model_plotting/model_demo.ipynb
+++ b/model/interactive_model_plotting/model_demo.ipynb
@@ -55,9 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# and import it    \n",
     "%load_ext autoreload\n",
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -75,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acf8ef6ad535437fa5fac7334ac914f7",
+       "model_id": "3223a28e2d1c49d08578b05a29cc7421",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,14 +113,14 @@
     "- **RRP Size:** Readily releasable pool size of the ribbon\n",
     "- **IP Size:** Intermediate pool size of the ribbon\n",
     "- **Max. Release Rate:** Maximal release rate, given as a fraction of the RRP size.\n",
-    "- **Ca activation baseline:** The baseline Ca which is necessary to activate the ribbon \"half\" (offset of the non-linearity).\n",
+    "- **Ca activation baseline:** The baseline Ca which is necessary to activate the ribbon \"half\" (shift of the sigmoidal non-linearity).\n",
     "- **Set to ... values:** Sets the parameters to the zone specific values (Acute zone, nasal region, dorsal region)\n",
     "\n",
     "\n",
     "##### Stimulus paramters\n",
     "\n",
     "- **Stimulus:** \"Light\" stimulus, with fixed or varying frequency.\n",
-    "    - *Fixed Step:* original flash stimulus as presented in the paper (3sec on and off phases respectivley.\n",
+    "    - *Fixed Step:* original flash stimulus as presented in the paper (3sec on and off phases respectivley).\n",
     "    - *Steps:* light flashes with varying frequency\n",
     "    - *Sine:* sinusoidal stimulus with varying frequency\n",
     "    - *Noise:* 'uniform' noise with frequency as changing rate\n",
@@ -124,7 +133,7 @@
     "- **Ca kernel (tau):** Time constant of the decay for a double exponential kernel. (For more details of the Calcium simulation see below) \n",
     "- **Time resolution:** Time resolution of the simulation. If you want to simulate high frequencies, decrease the time resolution. This results in longer runtimes, so be patient.\n",
     "- **Track changes:** If you tick this box, five subsequen simulation results will be displayed before the figure is reset.\n",
-    "- **Clear plot:** Resets the figure internally for the next plotting event (If *Track changes* is ticked). \n",
+    "- **Clear plot:** Resets the figure internally for the **next** plotting event (If *Track changes* is ticked). \n",
     "\n",
     "\n"
    ]
@@ -159,6 +168,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   },
   "varInspector": {
    "cols": {
