minor changes in namings and comments

--- a/model/interactive_model_plotting/model_demo.ipynb
+++ b/model/interactive_model_plotting/model_demo.ipynb
@@ -13,7 +13,9 @@
    "source": [
     "Run this notebook in google colab by clicking here:\n",
     "\n",
-    "https://colab.research.google.com/github/coschroeder/cone_ribbon/blob/master/model/interactive_model_plotting/model_demo.ipynb"
+    "https://colab.research.google.com/github/coschroeder/cone_ribbon/blob/master/model/interactive_model_plotting/model_demo.ipynb\n",
+    "\n",
+    "By following the instructions the necessary files will be loaded from https://github.com/coschroeder/cone_ribbon ."
    ]
   },
   {
@@ -68,7 +70,7 @@
     }
    ],
    "source": [
-    "# and import it    \n",
+    "# and import the necessary functions  \n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "from utils_interactive import Ribbon_Plot"
@@ -76,15 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3223a28e2d1c49d08578b05a29cc7421",
+       "model_id": "c299bfa499454be1be122d080f4c38ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
    ],
    "source": [
     "# Set the figuresize matching best to your browser window/screensize.\n",
-    "figuresize = (20,8)\n",
+    "figuresize = (10,8)\n",
     "\n",
     "ribbon = Ribbon_Plot(figsize=figuresize)"
    ]
@@ -113,7 +113,7 @@
     "- **RRP Size:** Readily releasable pool size of the ribbon\n",
     "- **IP Size:** Intermediate pool size of the ribbon\n",
     "- **Max. Release Rate:** Maximal release rate, given as a fraction of the RRP size.\n",
-    "- **Ca activation baseline:** The baseline Ca which is necessary to activate the ribbon \"half\" (shift of the sigmoidal non-linearity).\n",
+    "- **Ca offset:** The baseline Ca which is necessary to activate the ribbon \"half\" (shift of the sigmoidal non-linearity).\n",
     "- **Set to ... values:** Sets the parameters to the zone specific values (Acute zone, nasal region, dorsal region)\n",
     "\n",
     "\n",
