--- a/model/interactive_model_plotting/model_demo.ipynb
+++ b/model/interactive_model_plotting/model_demo.ipynb
@@ -98,7 +98,7 @@
    ],
    "source": [
     "# Set the figuresize matching best to your browser window/screensize.\n",
-    "figuresize = (10,8)\n",
+    "figuresize = (10,8) # (width, height)\n",
     "\n",
     "ribbon = Ribbon_Plot(figsize=figuresize)"
    ]
@@ -109,7 +109,7 @@
    "source": [
     "### Parameter explanation\n",
     "\n",
-    "##### Ribbon paramters\n",
+    "##### Ribbon parameters\n",
     "- **RRP Size:** Readily releasable pool size of the ribbon\n",
     "- **IP Size:** Intermediate pool size of the ribbon\n",
     "- **Max. Release Rate:** Maximal release rate, given as a fraction of the RRP size.\n",
@@ -117,7 +117,7 @@
     "- **Set to ... values:** Sets the parameters to the zone specific values (Acute zone, nasal region, dorsal region)\n",
     "\n",
     "\n",
-    "##### Stimulus paramters\n",
+    "##### Stimulus parameters\n",
     "\n",
     "- **Stimulus:** \"Light\" stimulus, with fixed or varying frequency.\n",
     "    - *Fixed Step:* original flash stimulus as presented in the paper (3sec on and off phases respectivley).\n",
@@ -128,7 +128,7 @@
     "- **Stimulus Frequency:** Frequency for the *Steps*, *Sine* and *Noise* stimulus.\n",
     "\n",
     "\n",
-    "##### Other paramters\n",
+    "##### Other parameters\n",
     "\n",
     "- **Ca kernel (tau):** Time constant of the decay for a double exponential kernel. (For more details of the Calcium simulation see below) \n",
     "- **Time resolution:** Time resolution of the simulation. If you want to simulate high frequencies, decrease the time resolution. This results in longer runtimes, so be patient.\n",
@@ -146,11 +146,10 @@
     "\n",
     "Ca concentration is simulated as following:\n",
     "\n",
-    "$$Ca_{concentration}(t) = Ca_{kernel} \\ast \\sigma(light\\_kernel \\ast stimulus(t)),$$\n",
+    "$$Ca(t) = \\kappa_2 \\ast \\exp(\\kappa_1 \\ast stimulus(t)),$$\n",
     "\n",
-    "where $\\sigma$ is a non-linearty and light_kernel is a biphasic kernel from [1].\n",
-    "\n",
-    "$Ca_{kernel}$ is a double exponential kernel with fixed time constant $\\tau_{rise}$ and variable decay parameter $\\tau_{decay}$, which can be chosen with the corresponding slider."
+    "where $\\kappa_1$ is a biphasic kernel from [1] and \n",
+    "$\\kappa_2$ is a double exponential kernel with fixed time constant $\\tau_{rise}$ and variable decay parameter $\\tau_{decay}$, which can be chosen with the corresponding slider."
    ]
   },
   {
