--- a/model/interactive_model_plotting/model_demo.ipynb
+++ b/model/interactive_model_plotting/model_demo.ipynb
@@ -57,18 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# and import the necessary functions  \n",
     "%load_ext autoreload\n",
@@ -78,18 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c299bfa499454be1be122d080f4c38ba",
+       "model_id": "147ea8152eee4842b11a48afc50e0e86",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(GridspecLayout(children=(FloatSlider(value=4.0, continuous_update=False, description='RRP Size:…"
+       "HBox(children=(GridspecLayout(children=(FloatSlider(value=4.0, continuous_update=False, description='RRP Size:…"
       ]
      },
      "metadata": {},
@@ -98,7 +89,7 @@
    ],
    "source": [
     "# Set the figuresize matching best to your browser window/screensize.\n",
-    "figuresize = (10,8) # (width, height)\n",
+    "figuresize = (12,6) # (width, height)\n",
     "\n",
     "ribbon = Ribbon_Plot(figsize=figuresize)"
    ]
